Allow tests to work without the Oxygen icon theme installed
To allow the framework to work without oxygen-icons being installed, we
create a dummy oxygen icon theme in a test data directory.

Reviewed by: David Faure

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -5,7 +5,9 @@ include(ECMMarkAsTest)
 
 macro(KICONTHEMES_TESTS)
     foreach(_testname ${ARGN})
-        add_executable(${_testname} ${_testname}.cpp)
+        set(_srcs ${_testname}.cpp)
+        qt5_add_resources(_srcs resources.qrc)
+        add_executable(${_testname} ${_srcs})
         add_test(kiconthemes-${_testname} ${_testname})
         ecm_mark_as_test(${_testname})
         target_link_libraries(${_testname} Qt5::Test KF5::IconThemes KF5::WidgetsAddons)
