add ksvg2icns tool
REVIEW: 115982

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_subdirectory(tools/kiconfinder)
+if (APPLE)
+    add_subdirectory(tools/ksvg2icns)
+endif()
 
 set(kiconthemes_SRCS
   kiconbutton.cpp
