--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,10 @@ ecm_setup_version(${KF5_VERSION}
                   SOVERSION 5)
 
 # Dependencies
-set(QT_REQUIRED_VERSION 5.2.0)
-find_package(Qt5Widgets ${QT_REQUIRED_VERSION} REQUIRED NO_MODULE)
-find_package(Qt5Svg ${QT_REQUIRED_VERSION} REQUIRED NO_MODULE)
-find_package(Qt5DBus ${QT_REQUIRED_VERSION} REQUIRED NO_MODULE)
+set(REQUIRED_QT_VERSION 5.2.0)
+find_package(Qt5Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+find_package(Qt5Svg ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+find_package(Qt5DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 
 if("${CMAKE_BINARY_DIR}" STREQUAL "${CMAKE_CURRENT_BINARY_DIR}")
   find_package(KF5I18n ${KF5_VERSION} REQUIRED)
