--- a/KF5IconThemesConfig.cmake.in
+++ b/KF5IconThemesConfig.cmake.in
@@ -5,7 +5,7 @@ find_dependency(KF5I18n "@KF5_VERSION@")
 find_dependency(KF5ItemViews "@KF5_VERSION@")
 find_dependency(KF5WidgetsAddons "@KF5_VERSION@")
 
-find_dependency(Qt5Widgets "@QT_REQUIRED_VERSION@")
+find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
 
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5IconThemesTargets.cmake")
