--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ remove_definitions(-DQT_NO_CAST_TO_ASCII)
 remove_definitions(-DQT_NO_CAST_FROM_ASCII)
 remove_definitions(-DQT_NO_CAST_FROM_BYTEARRAY)
 
+add_definitions(-DTRANSLATION_DOMAIN=\"kiconthemes5\")
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(autotests)
