Use dep version for dependencies in *.cmake.in too

--- a/KF5IconThemesConfig.cmake.in
+++ b/KF5IconThemesConfig.cmake.in
@@ -1,9 +1,9 @@
 @PACKAGE_INIT@
 
-find_dependency(KF5ConfigWidgets "@KF5_VERSION@")
-find_dependency(KF5I18n "@KF5_VERSION@")
-find_dependency(KF5ItemViews "@KF5_VERSION@")
-find_dependency(KF5WidgetsAddons "@KF5_VERSION@")
+find_dependency(KF5ConfigWidgets "@KF5_DEP_VERSION@")
+find_dependency(KF5I18n "@KF5_DEP_VERSION@")
+find_dependency(KF5ItemViews "@KF5_DEP_VERSION@")
+find_dependency(KF5WidgetsAddons "@KF5_DEP_VERSION@")
 
 find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
 
