--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -7,3 +7,7 @@ platforms:
 portingAid: false
 deprecated: false
 release: true
+libraries:
+ - qmake: KIconThemes
+   cmake: "KF5::IconThemes"
+cmakename: KF5IconThemes
