Introduce logging category.
Enables us to efficiently filter out these messages in other apps.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(kiconthemes_SRCS
   kiconengine.cpp
   kiconloader.cpp
   kicontheme.cpp
+  debug.cpp
 )
 
 add_library(KF5IconThemes ${kiconthemes_SRCS})
