--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ include(GenerateExportHeader)
 include(ECMSetupVersion)
 include(ECMGenerateHeaders)
 include(ECMMarkNonGuiExecutable)
+include(ECMQtDeclareLoggingCategory)
 
 set(KF5_VERSION "5.20.0") # handled by release scripts
 set(KF5_DEP_VERSION "5.19.0") # handled by release scripts
