use system colors for monochrome icons
Breeze uses stylesheet information to color
its icons with some "named" colors that change
depending from the current system color scheme,
this is already used since some time in the
icons used by the Plasma shell.
But QWidget applications have the same problem,
when the user changes the color scheme from
breeze to breeze dark (or any color scheme),
most of the icons will be black on black.
This patch clones (a bit simplified and taking
only the most "important" colors) the logic
used by Plasma::Svg to color icons with
the stylesheet.

REVIEW:127779

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,6 +26,7 @@ target_link_libraries(KF5IconThemes
   PRIVATE
     Qt5::DBus
     Qt5::Svg
+    KF5::Archive       # for KCompressionDevice
     KF5::I18n          # for i18n in KIconDialog
     KF5::WidgetsAddons # for KPixmapSequence family
     KF5::ItemViews      # for KListWidgetSearchLine
