--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -11,3 +11,7 @@ libraries:
  - qmake: KIconThemes
    cmake: "KF5::IconThemes"
 cmakename: KF5IconThemes
+
+public_lib: true
+group: Frameworks
+subgroup: Tier 3
