--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -17,3 +17,13 @@ kiconthemes_tests(
   kiconloader_benchmark
   kicontheme_unittest
 )
+
+### Test for RCC loading
+
+get_target_property(QT_RCC_EXECUTABLE Qt5::rcc LOCATION)
+add_custom_command(OUTPUT icontheme.rcc
+   COMMAND ${QT_RCC_EXECUTABLE} --binary -o icontheme.rcc ${CMAKE_CURRENT_SOURCE_DIR}/icontheme.qrc
+       DEPENDS icontheme.qrc
+)
+ecm_add_test(kiconloader_rcctest.cpp LINK_LIBRARIES Qt5::Test KF5::IconThemes KF5::WidgetsAddons KF5::ConfigCore)
+add_custom_target(rcctest-rcc ALL DEPENDS icontheme.rcc) # a custom target that is always built
