KIconEngine: Fix QIcon::hasThemeIcon always returning true
QIcon::hasThemeIcon(name) checks if QIcon::name() == name,
so icon engine must return empty string when icon doesn't exist.
Also implement IsNullHook for Qt 5.7. Comes with autotest.

REVIEW: 128397
BUG: 365130

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -16,6 +16,7 @@ kiconthemes_tests(
   kiconloader_resourcethemetest
   kiconloader_benchmark
   kicontheme_unittest
+  kiconengine_unittest
 )
 
 ### Test for RCC loading
