Fix assert in KIconDialog constructor after commit 71976ab
CCMAIL: cfeck@kde.org

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -17,6 +17,7 @@ kiconthemes_tests(
   kiconloader_benchmark
   kicontheme_unittest
   kiconengine_unittest
+  kicondialog_unittest
 )
 
 ### Test for RCC loading
