--- a/KF5IconThemesConfig.cmake.in
+++ b/KF5IconThemesConfig.cmake.in
@@ -5,4 +5,4 @@ find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
 
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5IconThemesTargets.cmake")
-
+@PACKAGE_INCLUDE_QCHTARGETS@
