--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,9 @@ ecm_setup_version(PROJECT
 set(REQUIRED_QT_VERSION 5.10.0)
 find_package(Qt5Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 find_package(Qt5Svg ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
-find_package(Qt5DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+if (NOT ANDROID)
+  find_package(Qt5DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+endif()
 
 find_package(KF5Archive ${KF5_DEP_VERSION} REQUIRED)
 find_package(KF5I18n ${KF5_DEP_VERSION} REQUIRED)
