--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,6 @@ install(FILES
   DESTINATION ${KDE_INSTALL_INCLUDEDIR_KF5} COMPONENT Devel
 )
 
-install(FILES kiconthemes.categories DESTINATION ${KDE_INSTALL_CONFDIR})
+install(FILES kiconthemes.categories  DESTINATION  ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
