Use ECMGenerateExportHeader to manage deprecated API better
Summary:
Allows
* projects linking to KIconThemes to hide deprecated API up to a
  given version or silence deprecation warnings after a given version,
  using
  * -DKICONTHEMES_DISABLE_DEPRECATED_BEFORE_AND_AT
  * -DKICONTHEMES_NO_DEPRECATED
  * -DKICONTHEMES_DEPRECATED_WARNINGS_SINCE
  * -DKICONTHEMES_NO_DEPRECATED_WARNINGS

  or
  * -DKF_DISABLE_DEPRECATED_BEFORE_AND_AT
  * -DKF_NO_DEPRECATED
  * -DKF_DEPRECATED_WARNINGS_SINCE
  * -DKF_NO_DEPRECATED_WARNINGS
* to build KIconThemes optionally with deprecated API excluded from
  the build, using "EXCLUDE_DEPRECATED_BEFORE_AND_AT" cmake argument.

Test Plan:
Builds with EXCLUDE_DEPRECATED_BEFORE_AND_AT set to 0, 4.8.0, 5.0.0,
5.63.0, CURRENT.

Reviewers: #frameworks, cfeck, mlaurent

Reviewed By: mlaurent

Subscribers: mlaurent, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D24608

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,8 +17,15 @@ qt5_add_resources(kiconthemes_SRCS
 ecm_qt_declare_logging_category(kiconthemes_SRCS HEADER debug.h IDENTIFIER  KICONTHEMES CATEGORY_NAME kf5.kiconthemes)
 
 add_library(KF5IconThemes ${kiconthemes_SRCS})
-generate_export_header(KF5IconThemes BASE_NAME KIconThemes)
 add_library(KF5::IconThemes ALIAS KF5IconThemes)
+ecm_generate_export_header(KF5IconThemes
+    BASE_NAME KIconThemes
+    # GROUP_BASE_NAME KF <- enable once all of KF modules use ecm_generate_export_header
+    VERSION ${KF5_VERSION}
+    DEPRECATED_BASE_VERSION 0
+    DEPRECATION_VERSIONS 4.8 5.0 5.63
+    EXCLUDE_DEPRECATED_BEFORE_AND_AT ${EXCLUDE_DEPRECATED_BEFORE_AND_AT}
+)
 
 target_include_directories(KF5IconThemes INTERFACE "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR_KF5}/KIconThemes>")
 
