Deprecate KIconTheme::assignIconsToContextMenu
Summary:
It's no longer necessary as Qt sets icons on context menu actions itself
by now.

Reviewers: mlaurent

Reviewed By: mlaurent

Subscribers: kde-frameworks-devel

Tags: #frameworks

Maniphest Tasks: T11865

Differential Revision: https://phabricator.kde.org/D24764

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ ecm_generate_export_header(KF5IconThemes
     GROUP_BASE_NAME KF
     VERSION ${KF5_VERSION}
     DEPRECATED_BASE_VERSION 0
-    DEPRECATION_VERSIONS 4.8 5.0 5.63
+    DEPRECATION_VERSIONS 4.8 5.0 5.63 5.64
     EXCLUDE_DEPRECATED_BEFORE_AND_AT ${EXCLUDE_DEPRECATED_BEFORE_AND_AT}
 )
 
