API dox: adapt kapidox & ecm_add_qch settings to new deprecation macros
GIT_SILENT

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -93,6 +93,7 @@ if(BUILD_QCH)
             KICONTHEMES_EXPORT
             KICONTHEMES_DEPRECATED
             KICONTHEMES_DEPRECATED_EXPORT
+            "KICONTHEMES_DEPRECATED_VERSION(x, y, t)"
         TAGFILE_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
         QCH_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
         COMPONENT Devel
