--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,10 @@ ecm_setup_version(PROJECT
 set(REQUIRED_QT_VERSION 5.15.2)
 find_package(Qt5Widgets ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 find_package(Qt5Svg ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(librsvg REQUIRED IMPORTED_TARGET librsvg-2.0)
+pkg_check_modules(cairo REQUIRED IMPORTED_TARGET cairo)
+pkg_check_modules(gdk-pixbuf REQUIRED IMPORTED_TARGET gdk-pixbuf-2.0)
 if (NOT ANDROID)
   find_package(Qt5DBus ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE)
 endif()
