--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,7 +46,7 @@ ecm_generate_export_header(KF5IconThemes
     GROUP_BASE_NAME KF
     VERSION ${KF_VERSION}
     DEPRECATED_BASE_VERSION 0
-    DEPRECATION_VERSIONS 4.8 5.0 5.63 5.64 5.65 5.66 5.82
+    DEPRECATION_VERSIONS 4.8 5.0 5.63 5.64 5.65 5.66 5.82 5.104
     EXCLUDE_DEPRECATED_BEFORE_AND_AT ${EXCLUDE_DEPRECATED_BEFORE_AND_AT}
 )
 
