Add unit test for icon positioning with High DPI scaling

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -16,8 +16,10 @@ kiconthemes_tests(
   kiconloader_resourcethemetest
   kicontheme_unittest
   kiconengine_unittest
+  kiconengine_scaled_unittest
   kicondialog_unittest
 )
+set_tests_properties(kiconengine_scaled_unittest PROPERTIES ENVIRONMENT QT_SCALE_FACTOR=2.0)
 
 ### Test for RCC loading
 
