--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,7 +30,7 @@ ecm_generate_export_header(KF5IconThemes
     GROUP_BASE_NAME KF
     VERSION ${KF_VERSION}
     DEPRECATED_BASE_VERSION 0
-    DEPRECATION_VERSIONS 4.8 5.0 5.63 5.64 5.65 5.66
+    DEPRECATION_VERSIONS 4.8 5.0 5.63 5.64 5.65 5.66 5.82
     EXCLUDE_DEPRECATED_BEFORE_AND_AT ${EXCLUDE_DEPRECATED_BEFORE_AND_AT}
 )
 
@@ -101,6 +101,9 @@ if(BUILD_QCH)
             KICONTHEMES_DEPRECATED
             KICONTHEMES_DEPRECATED_EXPORT
             "KICONTHEMES_DEPRECATED_VERSION(x, y, t)"
+            "KICONTHEMES_DEPRECATED_VERSION_BELATED(x, y, xt, yt, t)"
+            "KICONTHEMES_ENUMERATOR_DEPRECATED_VERSION(x, y, t)"
+            "KICONTHEMES_ENUMERATOR_DEPRECATED_VERSION_BELATED(x, y, xt, yt, t)"
         TAGFILE_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
         QCH_INSTALL_DESTINATION ${KDE_INSTALL_QTQCHDIR}
         COMPONENT Devel
