--- a/KF5IconThemesConfig.cmake.in
+++ b/KF5IconThemesConfig.cmake.in
@@ -3,6 +3,21 @@
 include(CMakeFindDependencyMacro)
 find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
 
+if (NOT @BUILD_SHARED_LIBS@)
+    find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
+    find_dependency(Qt5Svg "@REQUIRED_QT_VERSION@")
+
+    if (NOT ANDROID)
+        find_dependency(Qt5DBus "@REQUIRED_QT_VERSION@")
+    endif()
+
+    find_dependency(KF5Archive "@KF_DEP_VERSION@")
+    find_dependency(KF5I18n "@KF_DEP_VERSION@")
+    find_dependency(KF5CoreAddons "@KF_DEP_VERSION@")
+    find_dependency(KF5ConfigWidgets "@KF_DEP_VERSION@")
+    find_dependency(KF5WidgetsAddons "@KF_DEP_VERSION@")
+    find_dependency(KF5ItemViews "@KF_DEP_VERSION@")
+endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF5IconThemesTargets.cmake")
 @PACKAGE_INCLUDE_QCHTARGETS@
