--- a/KF5IconThemesConfig.cmake.in
+++ b/KF5IconThemesConfig.cmake.in
@@ -1,14 +1,14 @@
 @PACKAGE_INIT@
 
 include(CMakeFindDependencyMacro)
-find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
+find_dependency(Qt@QT_MAJOR_VERSION@Widgets "@REQUIRED_QT_VERSION@")
 
 if (NOT @BUILD_SHARED_LIBS@)
-    find_dependency(Qt5Widgets "@REQUIRED_QT_VERSION@")
-    find_dependency(Qt5Svg "@REQUIRED_QT_VERSION@")
+    find_dependency(Qt@QT_MAJOR_VERSION@Widgets "@REQUIRED_QT_VERSION@")
+    find_dependency(Qt@QT_MAJOR_VERSION@Svg "@REQUIRED_QT_VERSION@")
 
     if (NOT ANDROID)
-        find_dependency(Qt5DBus "@REQUIRED_QT_VERSION@")
+        find_dependency(Qt@QT_MAJOR_VERSION@DBus "@REQUIRED_QT_VERSION@")
     endif()
 
     find_dependency(KF5Archive "@KF_DEP_VERSION@")
