--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -7,6 +7,8 @@ platforms:
     - name: FreeBSD
     - name: Windows
     - name: macOS
+    - name: Android
+      note: Porting aid, reduced functionality
 portingAid: false
 deprecated: false
 release: true
