--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,12 @@
 
 include(ECMMarkAsTest)
 
-find_package(Qt${QT_MAJOR_VERSION} ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
+find_package(Qt6 ${REQUIRED_QT_VERSION} CONFIG REQUIRED Test)
 
 macro(kiconthemes_executable_tests)
   foreach(_testname ${ARGN})
     add_executable(${_testname} ${_testname}.cpp)
-    target_link_libraries(${_testname} Qt${QT_MAJOR_VERSION}::Test KF6::IconThemes KF6::WidgetsAddons)
+    target_link_libraries(${_testname} Qt6::Test KF6::IconThemes KF6::WidgetsAddons)
     ecm_mark_as_test(${_testname})
   endforeach(_testname)
 endmacro()
