Add missing includes/links

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -61,6 +61,7 @@ target_link_libraries(KF6IconThemes
     KF6::Archive       # for KCompressionDevice
     KF6::I18n          # for i18n in KIconDialog
     KF6::WidgetsAddons # for KPixmapSequence family
+    KF6::ConfigCore
     KF6::ConfigWidgets # for KColorScheme
     KF6::CoreAddons    # for kshareddatacache.h
 )
