--- a/KF6IconThemesConfig.cmake.in
+++ b/KF6IconThemesConfig.cmake.in
@@ -16,6 +16,7 @@ if (NOT @BUILD_SHARED_LIBS@)
     find_dependency(KF6CoreAddons "@KF_DEP_VERSION@")
     find_dependency(KF6ConfigWidgets "@KF_DEP_VERSION@")
     find_dependency(KF6WidgetsAddons "@KF_DEP_VERSION@")
+    find_dependency(KF6ColorScheme "@KF_DEP_VERSION@")
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/KF6IconThemesTargets.cmake")
