Remove code for generating pri file
We agreed on removing this for KF6, see https://invent.kde.org/teams/frameworks-devs/kf6-workboard/-/issues/27#note_611945 for KF6 weekly notes

--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -13,8 +13,7 @@ portingAid: false
 deprecated: false
 release: true
 libraries:
- - qmake: KIconThemes
-   cmake: "KF6::IconThemes"
+ - cmake: "KF6::IconThemes"
 cmakename: KF6IconThemes
 
 public_lib: true
