Use dark icons if configured and available

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,11 @@ target_sources(KF5IconThemes PRIVATE
     hicolor.qrc
     )
 
+if (WIN32) 
+   target_sources(KF5IconThemes PRIVATE 
+       DarkModeSetup.cpp)
+endif()
+
 # TODO what's that PRIVATE about above?
 ki18n_wrap_ui(KF5IconThemes kicondialog.ui)
 
